# nox

./: .gitignore  Cargo.toml  GRAMMAR  LEXER  README.md  nox.g4
benches/: munchausen.rs  range.rs
src/: error.rs  lib.rs  main.rs
src/lexer/: logos_lexer.rs  mod.rs  tests.rs  token.rs
src/lexer/num_parser/: mod.rs
src/libraries/: mod.rs  prelude.rs  std.rs
src/parser/: bytecode.rs  expression.rs  mod.rs  serialize.rs  tests.rs
src/parser/snapshots/: nox__parser__tests__binary_ops__boolean.snap  nox__parser__tests__binary_ops__complex_arithmetics.snap  nox__parser__tests__binary_ops__left_associativity.snap  nox__parser__tests__binary_ops__simple_arithmetics.snap  nox__parser__tests__errors__assign_read_only.snap  nox__parser__tests__errors__break_outside_of_loop.snap  nox__parser__tests__errors__expected_expression.snap  nox__parser__tests__errors__for_variable_expected_identifier.snap  nox__parser__tests__errors__global_local_conflict.snap  nox__parser__tests__errors__incorrect_break.snap  nox__parser__tests__errors__incorrect_expression.snap  nox__parser__tests__errors__incorrect_stmt_start.snap  nox__parser__tests__errors__missing_end.snap  nox__parser__tests__errors__table_declare_variable_twice.snap  nox__parser__tests__for_loop.snap  nox__parser__tests__for_loop_complete.snap  nox__parser__tests__functions__anonymous.snap  nox__parser__tests__functions__global_statement.snap  (+11 more)
src/runtime/: ffi.rs  gc.rs  mod.rs  run.rs  tests.rs  unchecked_run.rs
src/runtime/values/: mod.rs  (+2 more)
src/vm/: ffi.rs  gc.rs  mod.rs  run.rs  tests.rs  unchecked_run.rs  values.rs
(+19 files in other folders)
