[package]
name = "nox"
version = "0.1.0"
authors = ["Arnaud <arnaud.golfouse@free.fr>"]
edition = "2018"
default-run = "repl"

[dependencies]
colored = "2.0"
rustyline = "7.0"
criterion = { version = "0.3", optional = true }

[profile.release]
lto = true
panic = "abort"

[features]
default = []
bench = ["criterion"]

[[bench]]
name = "munchausen"
harness = false
required-features = ["bench"]

[[bench]]
name = "range"
harness = false
required-features = ["bench"]
